RESOLVED FIXED 257109
[IFC] Hyphenation does not work across renderers
https://bugs.webkit.org/show_bug.cgi?id=257109
Summary [IFC] Hyphenation does not work across renderers
zalan
Reported 2023-05-21 20:29:26 PDT
ssia
Attachments
Patch (16.26 KB, patch)
2023-05-21 20:44 PDT, zalan
no flags
Patch (16.26 KB, patch)
2023-05-23 07:01 PDT, zalan
no flags
zalan
Comment 1 2023-05-21 20:44:07 PDT
zalan
Comment 2 2023-05-23 07:01:51 PDT
EWS
Comment 3 2023-05-23 10:36:45 PDT
Committed 264426@main (f839715515ca): <https://commits.webkit.org/264426@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 466463 [details].
Radar WebKit Bug Importer
Comment 4 2023-05-23 10:37:18 PDT
Note You need to log in before you can comment on or make changes to this bug.