[IFC] Hyphenation does not work across renderers https://bugs.webkit.org/show_bug.cgi?id=257109

Reviewed by Antti Koivisto.

When a hyphenation candidate word is split across multiple renderers (e.g. JS construct them
individually, or float/out-of-flow content gets in-between them), we only try to hyphenate
the individual inline items but not the complete word.

e.g.

  high<div style="position: absolute"></div>way

produces the following in-flow inline items with no soft wrap opportunities in-between them

  [high][way]

and if this content overflows (let's say after 'w'), we try to hyphenate [high]
but not [highway].

This patch ensures we pass in a concatenated version of such adjacent content to hyphenation.

* LayoutTests/TestExpectations:
* LayoutTests/fast/inline/hyphen-across-renderers-expected.html: Added.
* LayoutTests/fast/inline/hyphen-across-renderers.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::processOverflowingContent const):
(WebCore::Layout::InlineContentBreaker::tryBreakingPreviousNonOverflowingRuns const):
(WebCore::Layout::InlineContentBreaker::tryHyphenationAcrossOverflowingInlineTextItems const):
(WebCore::Layout::InlineContentBreaker::processOverflowingContentWithText const):
* Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.h:
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::commitPartialContent):

Canonical link: https://commits.webkit.org/264426@main